iptables/demo_iptables.rules
# Generated by iptables-save v1.4.10 on Wed May  7 14:23:05 2014
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:admin_IP - [0:0]
:webmaster_IP - [0:0]
-A INPUT -i lo -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 139 -j webmaster_IP 
-A INPUT -p tcp -m tcp --dport 445 -j webmaster_IP 
-A INPUT -p tcp -m tcp --dport 22 -j admin_IP 
-A INPUT -p tcp -m tcp --dport 10000 -j admin_IP 
-A INPUT -j DROP 
-A admin_IP -s 10.100.2.3/32 -j ACCEPT 
-A admin_IP -s 10.100.2.4/32 -j ACCEPT 
-A admin_IP -s 10.100.2.7/32 -j ACCEPT 
-A admin_IP -j DROP 
-A webmaster_IP -s 10.100.2.11/32 -j ACCEPT 
-A webmaster_IP -s 10.100.2.17/32 -j ACCEPT 
-A webmaster_IP -s 10.100.2.34/32 -j ACCEPT 
-A webmaster_IP -j admin_IP 
COMMIT
# Completed on Wed May  7 14:23:05 2014
